Arreglados fallos minimos y terminado panel de estadisticas